braid-llm-kit/core/grammar.ebnf
(* Braid Language Grammar — v0.5.0 *)
(* Target-agnostic DSL for capability-controlled tool execution *)
(* Pipeline: source → parse → AST → lower → IR → emit(js|py|rs|...) *)

program     = { item } ;
item        = { annotation } ( fn_decl | type_decl | import_decl ) ;

(* ── Annotations ────────────────────────────────────────── *)
annotation  = "@" IDENT [ "(" arg_list ")" ] ;
arg_list    = IDENT { "," IDENT } ;

(* ── Functions ──────────────────────────────────────────── *)
fn_decl     = "fn" IDENT "(" [ params ] ")" "->" type_ref [ effects ] block ;
params      = param { "," param } ;
param       = [ "..." ] IDENT [ ":" type_ref ] ;
effects     = "!" IDENT { "," IDENT } ;

(* ── Types ──────────────────────────────────────────────── *)
type_decl   = "type" IDENT [ type_params ] "=" type_body ;
type_params = "<" IDENT { "," IDENT } ">" ;
type_body   = variant { "|" variant } ;
variant     = IDENT [ "{" fields "}" ] | "{" fields "}" ;
fields      = field { "," field } ;
field       = IDENT ":" type_ref ;
type_ref    = IDENT [ "<" type_ref { "," type_ref } ">" ] ;

(* ── Imports ────────────────────────────────────────────── *)
import_decl = "import" "{" IDENT { "," IDENT } "}" "from" STRING ;

(* ── Statements ─────────────────────────────────────────── *)
block       = "{" { statement } "}" ;
statement   = let_stmt | return_stmt | if_stmt | for_stmt
            | while_stmt | break_stmt | continue_stmt | expr_stmt ;
let_stmt    = "let" IDENT [ ":" type_ref ] "=" expr ";" ;
return_stmt = "return" expr ";" ;
if_stmt     = "if" [ "(" ] expr [ ")" ] block [ "else" ( if_stmt | block ) ] ;
for_stmt    = "for" IDENT "in" expr block ;
while_stmt  = "while" [ "(" ] expr [ ")" ] block ;
break_stmt  = "break" ";" ;
continue_stmt = "continue" ";" ;
expr_stmt   = expr ";" ;

(* ── Expressions (by precedence, low to high) ───────────── *)
expr        = pipe_expr ;
pipe_expr   = or_expr { "|>" or_expr } ;
or_expr     = and_expr { "||" and_expr } ;
and_expr    = eq_expr { "&&" eq_expr } ;
eq_expr     = cmp_expr { ( "==" | "!=" ) cmp_expr } ;
cmp_expr    = add_expr { ( "<" | ">" | "<=" | ">=" ) add_expr } ;
add_expr    = mul_expr { ( "+" | "-" ) mul_expr } ;
mul_expr    = unary_expr { ( "*" | "/" | "%" ) unary_expr } ;
unary_expr  = ( "-" | "!" ) unary_expr | postfix_expr ;
postfix_expr = primary { "." IDENT | "?." IDENT | "[" expr "]" | "(" [ arg_exprs ] ")" } ;
arg_exprs   = arg_expr { "," arg_expr } ;
arg_expr    = [ "..." ] expr ;

(* ── Primary Expressions ────────────────────────────────── *)
primary     = NUMBER | STRING | TEMPLATE | BOOL | "null"
            | IDENT | match_expr | lambda_expr
            | array_lit | object_lit | "(" expr ")" ;

match_expr  = "match" expr "{" { match_arm } "}" ;
match_arm   = pattern "=>" ( block | "return" expr | expr ) [ "," ] ;
pattern     = "_" | IDENT [ "{" IDENT { "," IDENT } "}" ] ;

lambda_expr = "(" [ IDENT { "," IDENT } ] ")" "=>" ( block | expr ) ;
array_lit   = "[" [ array_elem { "," array_elem } ] "]" ;
array_elem  = [ "..." ] expr ;
object_lit  = "{" [ obj_prop { "," obj_prop } ] "}" ;
obj_prop    = "..." expr | IDENT ":" expr ;

(* ── Terminals ──────────────────────────────────────────── *)
TEMPLATE    = "`" { CHAR | "${" expr "}" } "`" ;
STRING      = '"' { CHAR } '"' | "'" { CHAR } "'" ;
NUMBER      = DIGIT { DIGIT } [ "." DIGIT { DIGIT } ] ;
BOOL        = "true" | "false" ;
IDENT       = LETTER { LETTER | DIGIT | "_" } ;

(* ── Built-in ADTs ──────────────────────────────────────── *)
(* Result<T, E> = Ok { value: T } | Err { error: E }       *)
(* Option<T>    = Some { value: T } | None                  *)

(* ── CRMError Constructors ──────────────────────────────── *)
(* CRMError.fromHTTP(url, status, operation)                *)
(* CRMError.notFound(entity, id, operation)                 *)
(* CRMError.validation(fn, field, message)                  *)
(* CRMError.forbidden(operation, role, required)            *)
(* CRMError.network(url, code, operation)                   *)

(* ── IO Namespaces (require effects) ────────────────────── *)
(* http.{get,post,put,delete}(url, opts) !net               *)
(* clock.{now,sleep}()                   !clock             *)
(* fs.{read,write}(path, data)           !fs                *)
(* rng.{random,uuid}()                   !rng               *)

(* ── Stdlib (target-agnostic) ───────────────────────────── *)
(* len, map, filter, reduce, find, some, every, includes,   *)
(* join, sort, reverse, flat, sum, avg,                     *)
(* keys, values, entries, parseInt, parseFloat, toString     *)

(* ── Compilation Pipeline ───────────────────────────────── *)
(* source.braid → parse() → AST → lower() → IR             *)
(*   → emitJS()     → JavaScript                           *)
(*   → emitPython() → Python 3                             *)
(*   → emit???()    → any target                           *)
